# nearly

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
nearly/: Cargo.toml
nearly-macros/: Cargo.toml  README.md
nearly-macros/src/: derive.rs  lib.rs  nearly.rs
nearly-proc/: Cargo.toml  README.md
nearly-proc/src/: derive.rs  lib.rs  nearly.rs
nearly/src/: lib.rs  nearly_eq.rs  nearly_ord.rs  tolerance.rs  ulps.rs
nearly/src/trait_impl/: collection.rs  map.rs  mod.rs  pin.rs  pointer.rs  primitive.rs  reference.rs  tuple.rs  unit.rs
nearly/tests/: assert_macros_test.rs  collection_test.rs  debug_assert_macros_test.rs  default_ord_eps_ulps_fn_test.rs  default_ord_tol_fn_test.rs  default_trait_fn.rs  default_trait_fn_test.rs  derive.rs  derive_eps_test.rs  derive_test.rs  derive_tol_test.rs  derive_ulps_test.rs  macro_eq_test.rs  macro_ord_test.rs  macros_test.rs  map_test.rs  nearly_eq_eps_test.rs  nearly_eq_tol_test.rs  nearly_eq_ulps_test.rs  pointer_test.rs  primitive_eq_eps_test.rs  primitive_eq_ulps_test.rs  primitive_ord_eps_test.rs  primitive_ord_ulps_test.rs  tuple_test.rs  unit_test.rs
nearly/tests/common/: mod.rs
src/: lib.rs  macros.rs  nearly_eq.rs  nearly_eq_eps.rs  nearly_eq_tol.rs  nearly_eq_ulps.rs  tolerance.rs  ulps.rs
tests/: assert_macros_test.rs  collection_test.rs  debug_assert_macros_test.rs  macros_test.rs  nearly_eq_eps_test.rs  nearly_eq_test.rs  nearly_eq_tol_test.rs  nearly_eq_ulps_test.rs  pointer_test.rs
