[workspace]
members = ["nearly", "nearly-proc"]

[workspace.package]
edition = "2021"
authors = ["Sebastian Mock"]
repository = "https://github.com/se-mo/nearly"
documentation = "https://docs.rs/nearly"
readme = "README.md"
keywords = ["float", "compare", "comparison", "almost", "equal"]
categories = ["mathematics", "no-std"]
license = "MIT"
