[workspace]
members = ["nearly", "nearly-macros"]

[workspace.package]
edition = "2021"
authors = ["Sebastian Mock"]
repository = "https://github.com/se-mo/nearly"
documentation = "https://docs.rs/nearly"
readme = "README.md"
keywords = ["float", "compare", "comparison", "almost", "equal"]
categories = ["development-tools::debugging", "mathematics", "no-std"]
license = "MIT"
