[workspace]
members = ["nearly", "nearly-macros"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.64.0"
authors = ["Sebastian Mock"]
repository = "https://github.com/se-mo/nearly"
documentation = "https://docs.rs/nearly"
readme = "README.md"
keywords = ["float", "compare", "comparison", "almost", "equal"]
categories = ["development-tools::debugging", "mathematics", "no-std"]
license = "MIT"
