[package]
name = "nearly"
version = "0.3.0-pre"
description = "A library to compare IEEE floating point types"
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
nearly-macros = { path = "../nearly-macros" }

[dev-dependencies]
mockall = "0.11"
paste = "1.0"
