[package]
name = "nearly"
version = "0.4.0-pre"
description = "Compare IEEE floating point types"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
nearly-macros = { version = "0.2.0-pre", path = "../nearly-macros" }

[dev-dependencies]
mockall = "0.12"
paste = "1.0"
